# serde-sqlite-jsonb

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: binary_float.rs  vs_json.rs
examples/: binary_float_compare.rs
src/: de.rs  error.rs  header.rs  json.rs  lib.rs  ser.rs
tests/: test_real_sqlite.rs
