[package]
name = "fifthtry-serde_sqlite_jsonb"
version = "0.1.0"
authors = ["Ophir Lojkine"]
categories = ["encoding"]
description = "A Serializer and Deserializer for SQLite jsonb binary format (FifthTry fork, till PR is merged)"
edition = "2021"
keywords = ["serde"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lovasoa/serde-sqlite-jsonb"
rust-version = "1.63"


[dependencies]
serde = "1.0"
# This crate depends EITHER on serde_json OR on serde_json5.
serde_json = { version = "1", optional = true }
serde_json5 = { version = "0.1", optional = true }

[features]
default = ["serde_json"]

[dev-dependencies]
serde_derive = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
criterion = { version = "0.5", features = ["html_reports"] }

[profile.bench]
debug = 1

[[bench]]
name = "vs_json"
harness = false